# project-noether

./: .gitignore  AGENTS.md  NORTH_STAR.md  pyproject.toml
.github/: REPO_METADATA.md
.github/workflows/: ci.yml
docs/: 00_INDEX.md  01_RESEARCH.md  02_TECH_SPEC.md  03_METHODOLOGY.md  04_EVALS.md
evals/: eval1_eh_trace.py  eval1s_adm.py  eval2_palatini.py  eval3_scalar_tensor.py  eval3p_scalar_perturbation.py  eval3s_spectrum.py  eval4_maxwell.py  eval5_gauss_bonnet.py  registry.py  test_eval1.py  test_eval1s.py  test_eval2.py  test_eval3.py  test_eval3p.py  test_eval3s.py  test_eval4.py  test_eval5.py  test_eval_general.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Latex.tsx  NprPanel.tsx  Workspace.tsx
frontend/lib/: api.ts
noether/: __init__.py
noether/cli/: chat.py  main.py
noether/kernels/: __init__.py  base.py  versions.py
noether/llm/: __init__.py  base.py  cli.py
noether/mcp/: __init__.py  server.py
noether/npr/: __init__.py  ast.py  conventions.py  latex.py  parse.py  schema.py  validate.py
noether/orchestrator/: __init__.py  definitions.py  derive.py  elicit.py  ingest.py  planner.py  resolutions.py  session.py  store.py  view.py
noether/server/: __init__.py  (+1 more)
tests/: test_cadabra_adapter.py  test_chat.py  test_definitions.py  test_derive.py  test_elicit.py  test_ingest.py  test_llm.py  test_mcp.py  test_npr.py  test_orchestrator.py  test_parse.py  test_provenance.py  test_server.py  test_sympy_adapter.py  test_sympy_geometry.py  test_versions.py
(+16 files in other folders)
